Improvement of reply attributes metabox (CSS)

--- a/src/bp-forums/admin/css/admin.css
+++ b/src/bp-forums/admin/css/admin.css
@@ -1,9 +1,10 @@
 
 /* Kludge for too-wide forums dropdown */
-#poststuff #bbp_forum_attributes select#parent_id,
-#poststuff #bbp_topic_attributes select#parent_id,
-#poststuff #bbp_reply_attributes select#bbp_forum_id {
-	max-width: 170px;
+@media only screen and (min-width: 700px) {
+
+	#poststuff #bbp_reply_attributes select {
+		min-width: 70%;
+	}
 }
 
 /* Version Badge */
