--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -627,7 +627,124 @@ form#bp-groups-form .fixed .column-comment {
 }
 
 /*
- * 3.4 Site Notices
+ * 3.4 Forums
+ */
+
+@media only screen and (min-width: 700px) {
+
+	#poststuff #bbp_reply_attributes select {
+		min-width: 70%;
+	}
+}
+
+body.post-type-reply #edit-slug-box {
+	padding-left: 0;
+	margin-top: 0;
+}
+
+#bbpress_group_admin_ui_meta_box fieldset {
+	min-width: 230px;
+}
+
+#bbp-dashboard-right-now p.sub,
+#bbp-dashboard-right-now .table,
+#bbp-dashboard-right-now .versions {
+	margin: -12px;
+}
+
+#bbp-dashboard-right-now .inside {
+	font-size: 12px;
+	padding-top: 20px;
+	margin-bottom: 0;
+}
+
+#bbp-dashboard-right-now p.sub {
+	padding: 5px 0 15px;
+	color: #8f8f8f;
+	font-size: 14px;
+	position: absolute;
+	top: -17px;
+	left: 15px;
+	right: 0;
+}
+
+#bbp-dashboard-right-now .table {
+	margin: 0;
+	padding: 0;
+	position: relative;
+}
+
+#bbp-dashboard-right-now .table_content {
+	float: left;
+	border-top: #ececec 1px solid;
+	width: 45%;
+}
+
+#bbp-dashboard-right-now .table_discussion {
+	float: right;
+	border-top: #ececec 1px solid;
+	width: 45%;
+}
+
+#bbp-dashboard-right-now table td {
+	padding: 3px 0;
+	white-space: nowrap;
+}
+
+#bbp-dashboard-right-now table tr.first td {
+	border-top: none;
+}
+
+#bbp-dashboard-right-now td.b {
+	padding-right: 6px;
+	padding-left: 0;
+	text-align: right;
+	font-family: Georgia, "Times New Roman", "Bitstream Charter", Times, serif;
+	font-size: 14px;
+	width: 1%;
+}
+
+#bbp-dashboard-right-now td.b a {
+	font-size: 18px;
+}
+
+#bbp-dashboard-right-now td.b a:hover {
+	color: #d54e21;
+}
+
+#bbp-dashboard-right-now .t {
+	font-size: 12px;
+	padding-right: 12px;
+	padding-left: 0;
+	padding-top: 6px;
+	color: #777;
+}
+
+#bbp-dashboard-right-now .t a {
+	white-space: nowrap;
+}
+
+#bbp-dashboard-right-now .spam {
+	color: #f00;
+}
+
+#bbp-dashboard-right-now .waiting {
+	color: #e66f00;
+}
+
+#bbp-dashboard-right-now .approved {
+	color: #0f0;
+}
+
+#bbp-dashboard-right-now a.button {
+	float: right;
+	clear: right;
+	position: relative;
+	top: -5px;
+}
+
+/*
+ * 3.5 Site Notices
  */
 .bp-new-notice-panel {
 	background: #fff;
@@ -714,7 +831,7 @@ form#bp-groups-form .fixed .column-comment {
 }
 
 /*
- * 3.5 Post Types
+ * 3.6 Post Types
  */
 body.post-type-bp-member-type .postbox .inside,
 body.post-type-bp-group-type .postbox .inside {
