BB resources #6: menu toggle added

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -894,7 +894,7 @@ body.post-type-bp-email .categorydiv label {
 	margin-bottom: 10px;
 }
 
-.bp-help-card-grid .bp-help-card .inside a {
+.bp-help-card-grid .bp-help-card .inside span.main {
 	display: block;
 	padding: 7px 10px;
 	background-color: #f7f7f7;
