--- a/src/bp-core/css/admin-bar-rtl.css
+++ b/src/bp-core/css/admin-bar-rtl.css
@@ -89,3 +89,7 @@ li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bp-me
 .nav-settings-subsubsub {
 	padding: 3px 0 22px 13px;
 }
+
+.nav-tab-wrapper a.bp-appboss.nav-tab {
+	display: none !important;
+}
