--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -65,44 +65,36 @@ TABLE OF CONTENTS:
 	margin-top: 25px;
 }
 
-.bp-about-wrap .card {
-	background: #fff;
-	min-width: 255px;
-	max-width: 100%;
-	border-radius: 6px;
-	border: 1px solid #e5e5e5;
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
-	margin: 0 0 20px;
-	padding: 2.2em 2.8em 2em;
+.bp-about-wrap .bp-admin-card {
+	margin: 20px 0 0;
 }
 
-.bp-about-wrap img {
+.bp-about-wrap .bp-admin-card h2 {
+	font-weight: 500;
+}
+
+.bp-about-wrap .bp-admin-card h2:before {
+	content: none;
+}
+
+.bp-about-wrap .bp-admin-card img {
 	margin: 0;
 	max-width: 100%;
 	height: auto;
 	vertical-align: middle;
 }
 
-.bp-about-wrap ul {
+.bp-about-wrap .bp-admin-card ul {
 	margin: 0;
 }
 
-.bp-about-wrap p {
+.bp-about-wrap .bp-admin-card p {
 	line-height: 1.5;
 	font-size: 14px;
 	margin: 0;
 }
 
-.bp-about-wrap h2 {
-	margin: 0 0 1.5em;
-	padding-bottom: 1.3em;
-	font-size: 22px;
-	font-weight: 600;
-	color: #333;
-	border-bottom: 1px solid #eaeaea;
-}
-
-.bp-about-wrap .wp-person {
+.bp-about-wrap .bp-admin-card .wp-person {
 	display: inline-block;
 	vertical-align: top;
 	margin: 0 10px 0 0;
@@ -110,7 +102,7 @@ TABLE OF CONTENTS:
 	width: 280px;
 }
 
-.bp-about-wrap .wp-person .gravatar {
+.bp-about-wrap .bp-admin-card .wp-person .gravatar {
 	float: left;
 	margin: 0 10px 10px 0;
 	border-radius: 100%;
@@ -118,7 +110,7 @@ TABLE OF CONTENTS:
 	height: 60px;
 }
 
-.bp-about-wrap .wp-person .web {
+.bp-about-wrap .bp-admin-card .wp-person .web {
 	margin: 6px 0 2px;
 	font-size: 16px;
 	font-weight: 400;
@@ -126,12 +118,12 @@ TABLE OF CONTENTS:
 	text-decoration: none;
 }
 
-.bp-about-wrap .wp-person .title {
+.bp-about-wrap .bp-admin-card .wp-person .title {
 	display: block;
 	font-weight: 300;
 }
 
-.bp-about-wrap p.wp-credits-list a {
+.bp-about-wrap .bp-admin-card p.wp-credits-list a {
 	white-space: nowrap;
 }
 
@@ -367,7 +359,7 @@ tr.bp-search-parent-field label {
 .bp-admin-card {
 	position: relative;
 	margin-top: 20px;
-	padding: 2.2em 2.8em 2em;
+	padding: 2.2em 2.8em;
 	min-width: 255px;
 	max-width: 1050px;
 	border-radius: 6px;
