--- a/src/bp-core/admin/css/hello-rtl.css
+++ b/src/bp-core/admin/css/hello-rtl.css
@@ -22,8 +22,9 @@ TABLE OF CONTENTS:
 	4.4 - Content content
 5.0 - Media
 6.0 - Media Queries
-	6.1 - Desktop Medium
-	6.2 - Desktop Large
+	6.1 - Desktop Small
+	6.2 - Desktop Medium
+	6.3 - Desktop Large
 ------------------------------------------------------------------------------*/
 /*------------------------------------------------------------------------------
  * 1.0 - Typography and colour
@@ -53,6 +54,30 @@ TABLE OF CONTENTS:
 
 .bp-hello-content p {
   font-size: 16px;
+}
+
+.bp-hello-content .video-wrapper {
+  padding: 30px 0;
+  margin: 0 auto;
+  max-width: 700px;
+}
+
+.bp-hello-content .video-wrapper .video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+.bp-hello-content .video-wrapper .video-container iframe,
+.bp-hello-content .video-wrapper .video-container object,
+.bp-hello-content .video-wrapper .video-container embed {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /*------------------------------------------------------------------------------
@@ -271,6 +296,10 @@ TABLE OF CONTENTS:
   background-color: white;
 }
 
+.bp-hello-appboss .bp-hello-content {
+  background-color: black;
+}
+
 /*------------------------------------------------------------------------------
  * 5.0 - Media
  *----------------------------------------------------------------------------*/
@@ -282,8 +311,17 @@ TABLE OF CONTENTS:
 /*------------------------------------------------------------------------------
  * 6.0 - Media Queries
  *----------------------------------------------------------------------------*/
+/**
+ * 6.1 - Desktop Small
+ */
+@media screen and (max-width: 1024px) {
+  #bp-hello-container {
+    width: 100%;
+  }
+}
+
 /*
- * 6.1 - Desktop Medium
+ * 6.2 - Desktop Medium
  */
 @media only screen and (min-width: 1024px) {
   #bp-hello-backdrop {
@@ -332,7 +370,7 @@ TABLE OF CONTENTS:
 }
 
 /**
- * 6.2 - Desktop Large
+ * 6.3 - Desktop Large
  */
 @media screen and (min-width: 1280px) {
   #bp-hello-container,
