--- a/src/bp-core/admin/sass/hello.scss
+++ b/src/bp-core/admin/sass/hello.scss
@@ -22,8 +22,9 @@ TABLE OF CONTENTS:
 	4.4 - Content content
 5.0 - Media
 6.0 - Media Queries
-	6.1 - Desktop Medium
-	6.2 - Desktop Large
+	6.1 - Desktop Small
+	6.2 - Desktop Medium
+	6.3 - Desktop Large
 ------------------------------------------------------------------------------*/
 
 /*------------------------------------------------------------------------------
@@ -62,6 +63,30 @@ TABLE OF CONTENTS:
 
 	p {
 		font-size: 16px;
+	}
+
+	.video-wrapper {
+		padding: 30px 0;
+		margin: 0 auto;
+		max-width: 700px;
+	}
+
+	.video-wrapper .video-container {
+		position: relative;
+		padding-bottom: 56.25%;
+		padding-top: 30px;
+		height: 0;
+		overflow: hidden;
+	}
+
+	.video-wrapper .video-container iframe,
+	.video-wrapper .video-container object,
+	.video-wrapper .video-container embed {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 	}
 }
 
@@ -314,6 +339,10 @@ TABLE OF CONTENTS:
 	background-color: rgb(255, 255, 255);
 }
 
+.bp-hello-appboss .bp-hello-content {
+	background-color: rgb(0, 0, 0);
+}
+
 /*------------------------------------------------------------------------------
  * 5.0 - Media
  *----------------------------------------------------------------------------*/
@@ -329,8 +358,18 @@ TABLE OF CONTENTS:
  * 6.0 - Media Queries
  *----------------------------------------------------------------------------*/
 
+/**
+ * 6.1 - Desktop Small
+ */
+@media screen and (max-width: 1024px) {
+
+	#bp-hello-container {
+		width: 100%;
+	}
+}
+
 /*
- * 6.1 - Desktop Medium
+ * 6.2 - Desktop Medium
  */
 @media only screen and (min-width: 1024px) {
 
@@ -395,7 +434,7 @@ TABLE OF CONTENTS:
 }
 
 /**
- * 6.2 - Desktop Large
+ * 6.3 - Desktop Large
  */
 @media screen and (min-width: 1280px) {
 
