--- a/src/bp-core/admin/css/hello.css
+++ b/src/bp-core/admin/css/hello.css
@@ -20,7 +20,6 @@ TABLE OF CONTENTS:
 	4.2 - Footer content
 	4.3 - Header content
 	4.4 - Content content
-5.0 - Media
 6.0 - Media Queries
 	6.1 - Desktop Small
 	6.2 - Desktop Medium
@@ -249,6 +248,10 @@ TABLE OF CONTENTS:
   font-size: 15px;
 }
 
+.bp-hello-appboss .bp-hello-footer {
+  border-top: none;
+}
+
 .bp-hello-social-cta {
   text-align: left;
 }
@@ -295,12 +298,9 @@ TABLE OF CONTENTS:
 }
 
 .bp-hello-appboss .bp-hello-content {
-  background-color: black;
+  padding: 0;
 }
 
-/*------------------------------------------------------------------------------
- * 5.0 - Media
- *----------------------------------------------------------------------------*/
 .bp-hello-content img {
   border-radius: 2px;
   max-width: 100%;
@@ -362,7 +362,11 @@ TABLE OF CONTENTS:
     height: calc(100% - 90px);
     padding: 0 30px;
   }
-  .bp-hello-content p {
+  .bp-hello-appboss .bp-hello-content {
+    height: auto;
+    padding: 0;
+  }
+  #bp-hello-container p {
     font-size: 14px;
   }
 }
@@ -375,5 +379,9 @@ TABLE OF CONTENTS:
   .bp-hello-footer {
     left: calc((100% - 896px) / 2);
     right: calc((100% - 896px) / 2);
+  }
+  .bp-hello-appboss .bp-hello-content {
+    height: auto;
+    padding: 0;
   }
 }
