--- a/src/bp-core/admin/sass/hello.scss
+++ b/src/bp-core/admin/sass/hello.scss
@@ -20,7 +20,6 @@ TABLE OF CONTENTS:
 	4.2 - Footer content
 	4.3 - Header content
 	4.4 - Content content
-5.0 - Media
 6.0 - Media Queries
 	6.1 - Desktop Small
 	6.2 - Desktop Medium
@@ -283,6 +282,10 @@ TABLE OF CONTENTS:
 	}
 }
 
+.bp-hello-appboss .bp-hello-footer {
+	border-top: none;
+}
+
 .bp-hello-social-cta {
 	text-align: left;
 }
@@ -338,12 +341,9 @@ TABLE OF CONTENTS:
 }
 
 .bp-hello-appboss .bp-hello-content {
-	background-color: rgb(0, 0, 0);
+	padding: 0;
 }
 
-/*------------------------------------------------------------------------------
- * 5.0 - Media
- *----------------------------------------------------------------------------*/
 .bp-hello-content {
 
 	img {
@@ -424,6 +424,14 @@ TABLE OF CONTENTS:
 		// Very very approx. height of header and footer.
 		height: calc(100% - 90px);
 		padding: 0 30px;
+	}
+
+	.bp-hello-appboss .bp-hello-content {
+		height: auto;
+		padding: 0;
+	}
+
+	#bp-hello-container {
 
 		p {
 			font-size: 14px;
@@ -442,4 +450,10 @@ TABLE OF CONTENTS:
 		left: calc((100% - 896px) / 2);
 		right: calc((100% - 896px) / 2);
 	}
+
+	.bp-hello-appboss .bp-hello-content {
+		height: auto;
+		padding: 0;
+	}
+
 }
