Loading and animations

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -377,8 +377,45 @@
 }
 
 .bb-photos-meta {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
 	margin-left: auto;
 	margin-bottom: 10px;
+
+	a {
+		margin-left: 10px;
+	}
+
+	.bb-delete i {
+		font-size: 21px;
+	}
+
+	.bb-select i {
+		border: 1px solid;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
+		align-items: center;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
+		justify-content: center;
+		font-size: 15px;
+		border-radius: 50%;
+		width: 19px;
+		height: 19px;
+	}
+
+	.bb-select.selected i {
+		background: #000;
+		color: #fff;
+		border-color: #000;
+	}
 }
 
 .bb-photos-date {
@@ -1143,4 +1180,10 @@ div.emojionearea.emojionearea-standalone .emojionearea-button > div {
 
 .bp-media-upload-tab {
 	margin-right: 15px;
+}
+
+#buddypress ul.bp-list.loading {
+	background: #fff;
+	padding: 20px;
+	text-align: center;
 }
