--- a/src/bp-core/css/admin-bar.css
+++ b/src/bp-core/css/admin-bar.css
@@ -25,7 +25,7 @@
 #wpadminbar .quicklinks li#wp-admin-bar-my-account a span.count,
 #wpadminbar .quicklinks li#wp-admin-bar-my-account-with-avatar a span.count,
 #wpadminbar .quicklinks li#wp-admin-bar-bp-notifications #ab-pending-notifications {
-	background: #21759b;
+	background: #0073aa;
 	color: #fff;
 	text-shadow: none;
 	display: inline;
@@ -45,7 +45,7 @@
 }
 
 #wpadminbar .quicklinks li#wp-admin-bar-bp-notifications #ab-pending-notifications.alert {
-	background-color: #21759b;
+	background-color: #0073aa;
 	color: #fff;
 }
 
@@ -74,7 +74,7 @@
 
 /* Member Switching */
 #wpadminbar #wp-admin-bar-top-secondary li#wp-admin-bar-switch-back a {
-	background: #21759b;
+	background: #0073aa;
 	color: #fff;
 }
 
