--- a/src/bp-core/admin/css/hello.css
+++ b/src/bp-core/admin/css/hello.css
@@ -349,6 +349,7 @@ TABLE OF CONTENTS:
     line-height: inherit;
   }
   #bp-hello-container.bp-hello-appboss {
+    top: 50px;
     bottom: auto;
     width: 105vmin;
     left: 0;
