--- a/src/bp-core/admin/css/hello.css
+++ b/src/bp-core/admin/css/hello.css
@@ -349,13 +349,16 @@ TABLE OF CONTENTS:
     line-height: inherit;
   }
   #bp-hello-container.bp-hello-appboss {
-    top: 50px;
+    /*top: 50px;*/
     bottom: auto;
     width: 105vmin;
+    max-width: 900px;
     left: 0;
     right: 0;
     margin-left: auto;
     margin-right: auto;
+    top: 50%;
+    transform: translateY(-50%);
   }
   #bp-hello-container.bp-hello-appboss .bp-hello-footer {
     height: 60px;
