--- a/src/bp-core/admin/sass/hello.scss
+++ b/src/bp-core/admin/sass/hello.scss
@@ -405,13 +405,16 @@ TABLE OF CONTENTS:
 		}
 
 		&.bp-hello-appboss {
-			top: 50px;
+			/*top: 50px;*/
 			bottom: auto;
 			width: 105vmin;
+			max-width: 900px;
 			left: 0;
 			right: 0;
 			margin-left: auto;
 			margin-right: auto;
+			top: 50%;
+    		transform: translateY(-50%);
 
 			.bp-hello-footer {
 				height: 60px;
