--- a/src/bp-core/admin/css/hello-rtl.css
+++ b/src/bp-core/admin/css/hello-rtl.css
@@ -348,6 +348,19 @@ TABLE OF CONTENTS:
   #bp-hello-container .bp-hello-header h1 {
     line-height: inherit;
   }
+  #bp-hello-container.bp-hello-appboss {
+    top: 50px;
+    bottom: auto;
+    width: 105vmin;
+    right: 0;
+    left: 0;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  #bp-hello-container.bp-hello-appboss .bp-hello-footer {
+    height: 60px;
+    position: static;
+  }
   .bp-hello-header {
     height: auto;
     max-height: inherit;
