--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -546,15 +546,19 @@
 	right: 8px;
 	top: 0;
 	text-decoration: none;
+
+	@include medium-small-max() {
+		color: rgba(0, 0, 0, 1);
+	}
 }
 
 #activity-link-preview-close-image {
 	border: 0;
 	color: #fff;
 	font-size: 16px;
-	right: 3px;
+	left: 3px;
 	position: absolute;
-	top: 0;
+	top: 3px;
 	text-decoration: none;
 }
 
