--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1901,13 +1901,19 @@ input.search-query-input {
   text-decoration: none;
 }
 
+@media screen and (max-width: 32em) {
+  #activity-close-link-suggestion {
+    color: black;
+  }
+}
+
 #activity-link-preview-close-image {
   border: 0;
   color: #fff;
   font-size: 16px;
-  left: 3px;
+  right: 3px;
   position: absolute;
-  top: 0;
+  top: 3px;
   text-decoration: none;
 }
 
