--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1901,13 +1901,19 @@ input.search-query-input {
   text-decoration: none;
 }
 
+@media screen and (max-width: 32em) {
+  #activity-close-link-suggestion {
+    color: black;
+  }
+}
+
 #activity-link-preview-close-image {
   border: 0;
   color: #fff;
   font-size: 16px;
-  right: 3px;
+  left: 3px;
   position: absolute;
-  top: 0;
+  top: 3px;
   text-decoration: none;
 }
 
@@ -5485,7 +5491,8 @@ button[data-bp-close]:hover {
   }
 }
 
-/*-------------------------------------*	HINT.css - A CSS tooltip library
+/*-------------------------------------*\
+	HINT.css - A CSS tooltip library
 \*-------------------------------------*/
 /**
  * HINT.css is a tooltip library made in pure CSS.
@@ -9972,7 +9979,7 @@ ul.bb-albums-list .bb-more-photos strong {
 .bb-album-list-item .bs-cover-wrap:after {
   content: " ";
   position: absolute;
-  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 60%, transparent 100%);
+  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 60%, rgba(0, 0, 0, 0) 100%);
   border-radius: 3px;
   width: 100%;
   height: 100%;
