basic style fixes for comments attachments

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_comment_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_comment_form.scss
@@ -42,6 +42,25 @@ form.ac-form {
 				}
 			}
 
+			.ac-reply-attachments {
+				padding: 10px 0;
+			}
+
+			.ac-reply-toolbar {
+				display: flex;
+
+				.post-elements-buttons-item {
+					margin-right: 15px;
+					position: relative;
+				}
+			}
+
+			.gif-search-results-list {
+				margin: 0;
+				padding: 0;
+				list-style: none;
+			}
+
 			.gif-search-content .gif-search-results ul li {
 				padding: 0;
 			}
