--- a/src/bp-core/css/quill-rtl.css
+++ b/src/bp-core/css/quill-rtl.css
@@ -15,7 +15,7 @@
 }
 
 .ql-clipboard {
-	left: -100000px;
+	right: -100000px;
 	height: 1px;
 	overflow-y: hidden;
 	position: absolute;
@@ -37,7 +37,7 @@
 	padding: 12px 15px;
 	tab-size: 4;
 	-moz-tab-size: 4;
-	text-align: left;
+	text-align: right;
 	white-space: pre-wrap;
 	word-wrap: break-word;
 }
@@ -60,7 +60,7 @@
 
 .ql-editor ol,
 .ql-editor ul {
-	padding-left: 1.5em;
+	padding-right: 1.5em;
 }
 
 .ql-editor ol > li,
@@ -74,19 +74,19 @@
 
 .ql-editor li:before {
 	display: inline-block;
-	margin-right: 0.3em;
-	text-align: right;
+	margin-left: 0.3em;
+	text-align: left;
 	white-space: nowrap;
 	width: 1.2em;
 }
 
 .ql-editor li:not(.ql-direction-rtl):before {
-	margin-left: -1.5em;
+	margin-right: -1.5em;
 }
 
 .ql-editor ol li,
 .ql-editor ul li {
-	padding-left: 1.5em;
+	padding-right: 1.5em;
 }
 
 .ql-editor ol li {
@@ -203,147 +203,147 @@
 }
 
 .ql-editor .ql-indent-1:not(.ql-direction-rtl) {
-	padding-left: 3em;
-}
-
-.ql-editor li.ql-indent-1:not(.ql-direction-rtl) {
-	padding-left: 4.5em;
-}
-
-.ql-editor .ql-indent-1.ql-direction-rtl.ql-align-right {
 	padding-right: 3em;
 }
 
-.ql-editor li.ql-indent-1.ql-direction-rtl.ql-align-right {
+.ql-editor li.ql-indent-1:not(.ql-direction-rtl) {
 	padding-right: 4.5em;
 }
 
+.ql-editor .ql-indent-1.ql-direction-rtl.ql-align-right {
+	padding-left: 3em;
+}
+
+.ql-editor li.ql-indent-1.ql-direction-rtl.ql-align-right {
+	padding-left: 4.5em;
+}
+
 .ql-editor .ql-indent-2:not(.ql-direction-rtl) {
-	padding-left: 6em;
-}
-
-.ql-editor li.ql-indent-2:not(.ql-direction-rtl) {
-	padding-left: 7.5em;
-}
-
-.ql-editor .ql-indent-2.ql-direction-rtl.ql-align-right {
 	padding-right: 6em;
 }
 
-.ql-editor li.ql-indent-2.ql-direction-rtl.ql-align-right {
+.ql-editor li.ql-indent-2:not(.ql-direction-rtl) {
 	padding-right: 7.5em;
 }
 
+.ql-editor .ql-indent-2.ql-direction-rtl.ql-align-right {
+	padding-left: 6em;
+}
+
+.ql-editor li.ql-indent-2.ql-direction-rtl.ql-align-right {
+	padding-left: 7.5em;
+}
+
 .ql-editor .ql-indent-3:not(.ql-direction-rtl) {
-	padding-left: 9em;
-}
-
-.ql-editor li.ql-indent-3:not(.ql-direction-rtl) {
-	padding-left: 10.5em;
-}
-
-.ql-editor .ql-indent-3.ql-direction-rtl.ql-align-right {
 	padding-right: 9em;
 }
 
-.ql-editor li.ql-indent-3.ql-direction-rtl.ql-align-right {
+.ql-editor li.ql-indent-3:not(.ql-direction-rtl) {
 	padding-right: 10.5em;
 }
 
+.ql-editor .ql-indent-3.ql-direction-rtl.ql-align-right {
+	padding-left: 9em;
+}
+
+.ql-editor li.ql-indent-3.ql-direction-rtl.ql-align-right {
+	padding-left: 10.5em;
+}
+
 .ql-editor .ql-indent-4:not(.ql-direction-rtl) {
-	padding-left: 12em;
-}
-
-.ql-editor li.ql-indent-4:not(.ql-direction-rtl) {
-	padding-left: 13.5em;
-}
-
-.ql-editor .ql-indent-4.ql-direction-rtl.ql-align-right {
 	padding-right: 12em;
 }
 
-.ql-editor li.ql-indent-4.ql-direction-rtl.ql-align-right {
+.ql-editor li.ql-indent-4:not(.ql-direction-rtl) {
 	padding-right: 13.5em;
 }
 
+.ql-editor .ql-indent-4.ql-direction-rtl.ql-align-right {
+	padding-left: 12em;
+}
+
+.ql-editor li.ql-indent-4.ql-direction-rtl.ql-align-right {
+	padding-left: 13.5em;
+}
+
 .ql-editor .ql-indent-5:not(.ql-direction-rtl) {
-	padding-left: 15em;
-}
-
-.ql-editor li.ql-indent-5:not(.ql-direction-rtl) {
-	padding-left: 16.5em;
-}
-
-.ql-editor .ql-indent-5.ql-direction-rtl.ql-align-right {
 	padding-right: 15em;
 }
 
-.ql-editor li.ql-indent-5.ql-direction-rtl.ql-align-right {
+.ql-editor li.ql-indent-5:not(.ql-direction-rtl) {
 	padding-right: 16.5em;
 }
 
+.ql-editor .ql-indent-5.ql-direction-rtl.ql-align-right {
+	padding-left: 15em;
+}
+
+.ql-editor li.ql-indent-5.ql-direction-rtl.ql-align-right {
+	padding-left: 16.5em;
+}
+
 .ql-editor .ql-indent-6:not(.ql-direction-rtl) {
-	padding-left: 18em;
-}
-
-.ql-editor li.ql-indent-6:not(.ql-direction-rtl) {
-	padding-left: 19.5em;
-}
-
-.ql-editor .ql-indent-6.ql-direction-rtl.ql-align-right {
 	padding-right: 18em;
 }
 
-.ql-editor li.ql-indent-6.ql-direction-rtl.ql-align-right {
+.ql-editor li.ql-indent-6:not(.ql-direction-rtl) {
 	padding-right: 19.5em;
 }
 
+.ql-editor .ql-indent-6.ql-direction-rtl.ql-align-right {
+	padding-left: 18em;
+}
+
+.ql-editor li.ql-indent-6.ql-direction-rtl.ql-align-right {
+	padding-left: 19.5em;
+}
+
 .ql-editor .ql-indent-7:not(.ql-direction-rtl) {
-	padding-left: 21em;
-}
-
-.ql-editor li.ql-indent-7:not(.ql-direction-rtl) {
-	padding-left: 22.5em;
-}
-
-.ql-editor .ql-indent-7.ql-direction-rtl.ql-align-right {
 	padding-right: 21em;
 }
 
-.ql-editor li.ql-indent-7.ql-direction-rtl.ql-align-right {
+.ql-editor li.ql-indent-7:not(.ql-direction-rtl) {
 	padding-right: 22.5em;
 }
 
+.ql-editor .ql-indent-7.ql-direction-rtl.ql-align-right {
+	padding-left: 21em;
+}
+
+.ql-editor li.ql-indent-7.ql-direction-rtl.ql-align-right {
+	padding-left: 22.5em;
+}
+
 .ql-editor .ql-indent-8:not(.ql-direction-rtl) {
-	padding-left: 24em;
-}
-
-.ql-editor li.ql-indent-8:not(.ql-direction-rtl) {
-	padding-left: 25.5em;
-}
-
-.ql-editor .ql-indent-8.ql-direction-rtl.ql-align-right {
 	padding-right: 24em;
 }
 
-.ql-editor li.ql-indent-8.ql-direction-rtl.ql-align-right {
+.ql-editor li.ql-indent-8:not(.ql-direction-rtl) {
 	padding-right: 25.5em;
 }
 
+.ql-editor .ql-indent-8.ql-direction-rtl.ql-align-right {
+	padding-left: 24em;
+}
+
+.ql-editor li.ql-indent-8.ql-direction-rtl.ql-align-right {
+	padding-left: 25.5em;
+}
+
 .ql-editor .ql-indent-9:not(.ql-direction-rtl) {
-	padding-left: 27em;
-}
-
-.ql-editor li.ql-indent-9:not(.ql-direction-rtl) {
-	padding-left: 28.5em;
-}
-
-.ql-editor .ql-indent-9.ql-direction-rtl.ql-align-right {
 	padding-right: 27em;
 }
 
-.ql-editor li.ql-indent-9.ql-direction-rtl.ql-align-right {
+.ql-editor li.ql-indent-9:not(.ql-direction-rtl) {
 	padding-right: 28.5em;
+}
+
+.ql-editor .ql-indent-9.ql-direction-rtl.ql-align-right {
+	padding-left: 27em;
+}
+
+.ql-editor li.ql-indent-9.ql-direction-rtl.ql-align-right {
+	padding-left: 28.5em;
 }
 
 .ql-editor .ql-video {
@@ -356,7 +356,7 @@
 }
 
 .ql-editor .ql-video.ql-align-right {
-	margin: 0 0 0 auto;
+	margin: 0 auto 0 0;
 }
 
 .ql-editor .ql-bg-black {
@@ -436,7 +436,7 @@
 }
 
 .ql-editor .ql-direction-rtl {
-	direction: rtl;
+	direction: ltr;
 	text-align: inherit;
 }
 
@@ -449,7 +449,7 @@
 }
 
 .ql-editor .ql-align-right {
-	text-align: right;
+	text-align: left;
 }
 
 .ql-editor.ql-blank:before {
@@ -473,7 +473,7 @@
 	border: none;
 	cursor: pointer;
 	display: inline-block;
-	float: left;
+	float: right;
 	height: 24px;
 	outline: none;
 	padding: 3px 5px;
@@ -482,7 +482,7 @@
 
 .ql-bubble.ql-toolbar button svg,
 .ql-bubble .ql-toolbar button svg {
-	float: left;
+	float: right;
 	height: 100%;
 }
 
@@ -675,10 +675,10 @@
 }
 
 .ql-bubble .ql-editor blockquote {
-	border-left: 4px solid #ccc;
+	border-right: 4px solid #ccc;
 	margin-bottom: 5px;
 	margin-top: 5px;
-	padding-left: 16px;
+	padding-right: 16px;
 }
 
 .ql-bubble .ql-editor code,
@@ -719,7 +719,7 @@
 .ql-bubble .ql-picker {
 	color: #ccc;
 	display: inline-block;
-	float: left;
+	float: right;
 	font-size: 14px;
 	font-weight: 500;
 	height: 24px;
@@ -731,8 +731,8 @@
 	cursor: pointer;
 	display: inline-block;
 	height: 100%;
-	padding-left: 8px;
-	padding-right: 2px;
+	padding-right: 8px;
+	padding-left: 2px;
 	position: relative;
 	width: 100%;
 }
@@ -790,7 +790,7 @@
 
 .ql-bubble .ql-color-picker .ql-picker-label svg,
 .ql-bubble .ql-icon-picker .ql-picker-label svg {
-	right: 4px;
+	left: 4px;
 }
 
 .ql-bubble .ql-icon-picker .ql-picker-options {
@@ -810,7 +810,7 @@
 
 .ql-bubble .ql-color-picker .ql-picker-item {
 	border: 1px solid transparent;
-	float: left;
+	float: right;
 	height: 16px;
 	margin: 2px;
 	padding: 0;
@@ -820,7 +820,7 @@
 .ql-bubble .ql-picker:not(.ql-color-picker):not(.ql-icon-picker) svg {
 	position: absolute;
 	margin-top: -9px;
-	right: 0;
+	left: 0;
 	top: 50%;
 	width: 18px;
 }
@@ -969,11 +969,11 @@
 }
 
 .ql-bubble .ql-toolbar .ql-formats {
-	margin: 8px 12px 8px 0;
+	margin: 8px 0 8px 12px;
 }
 
 .ql-bubble .ql-toolbar .ql-formats:first-child {
-	margin-left: 12px;
+	margin-right: 12px;
 }
 
 .ql-bubble .ql-color-picker svg {
@@ -994,12 +994,12 @@
 
 .ql-bubble .ql-tooltip-arrow {
 	border-bottom: 6px solid #444;
-	border-left: 6px solid transparent;
 	border-right: 6px solid transparent;
+	border-left: 6px solid transparent;
 	content: " ";
 	display: block;
-	left: 50%;
-	margin-left: -6px;
+	right: 50%;
+	margin-right: -6px;
 	position: absolute;
 	top: -6px;
 }
@@ -1031,7 +1031,7 @@
 .ql-bubble .ql-tooltip-editor a {
 	top: 10px;
 	position: absolute;
-	right: 20px;
+	left: 20px;
 }
 
 .ql-bubble .ql-tooltip-editor a:before {
