--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -56,8 +56,6 @@
 		padding: 10px;
 	}
 
-
-
 	#whats-new-elements-buttons {
 		margin: 1em 0;
 
@@ -266,7 +264,7 @@
 		list-style: none;
 
 		li {
-			margin: 0 0 4px 0;
+			margin: 0 0 4px;
 			padding: 0;
 		}
 
