--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1367,7 +1367,7 @@ a.layout-grid-view {
 }
 
 .gif-search-content .gif-search-results ul li {
-  margin: 0 0 4px 0;
+  margin: 0 0 4px;
   padding: 0;
 }
 
@@ -7153,8 +7153,8 @@ div.bbp-reply-header {
   visibility: hidden;
 }
 
-#bbpress-forums div.bbp-topic-content a,
-#bbpress-forums div.bbp-reply-content a {
+#bbpress-forums div.bbp-topic-content a:not(.entry-img),
+#bbpress-forums div.bbp-reply-content a:not(.entry-img) {
   background: none;
   border: none;
   display: inline;
