BB resources #6: hide side  in dashboard

--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -938,6 +938,10 @@ body.post-type-bp-email .categorydiv label {
   background: #fff;
 }
 
+.buddyboss_page_bp-help .bb-help-content li.miscellaneous {
+  display: none;
+}
+
 .bp-help-card-grid {
   margin-top: 20px;
 }
