--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -999,6 +999,34 @@ body.post-type-bp-email .categorydiv label {
   display: flex;
 }
 
+.bb-help-sidebar {
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+.bb-help-content .bb-help-menu li {
+  display: inline;
+}
+
+.bb-help-content .bb-help-menu li:after {
+  font-family: dashicons;
+  content: "\f345";
+  margin: 0 3px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.bb-help-content .bb-help-file-content {
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+  box-sizing: border-box;
+  padding: 20px;
+}
+
 /*------------------------------------------------------------------------------
  * 7.0 Plugins page
  *----------------------------------------------------------------------------*/
