--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -999,10 +999,20 @@ body.post-type-bp-email .categorydiv label {
   display: flex;
 }
 
-.bb-help-sidebar {
+.bb-help-content .bb-help-file-content {
+  min-width: 255px;
+  max-width: 1050px;
+  padding: 2.2em 2.8em;
   background-color: #fff;
+  border-radius: 6px;
   border: 1px solid #e5e5e5;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+  box-sizing: border-box;
+}
+
+.bb-help-content .bb-help-sidebar {
+  background-color: #fff;
+  border: 1px solid #000;
   box-sizing: border-box;
   padding: 20px;
 }
@@ -1017,14 +1027,6 @@ body.post-type-bp-email .categorydiv label {
   margin: 0 3px;
   display: inline-block;
   vertical-align: middle;
-}
-
-.bb-help-content .bb-help-file-content {
-  background-color: #fff;
-  border: 1px solid #e5e5e5;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
-  box-sizing: border-box;
-  padding: 20px;
 }
 
 /*------------------------------------------------------------------------------
