--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1028,39 +1028,48 @@ body.post-type-bp-email .categorydiv label {
 }
 
 .bb-help-content {
-
-	.bb-help-file-content {
-		min-width: 255px;
-		max-width: 1050px;
-		padding: 2.2em 2.8em;
-		background-color: #fff;
-		border-radius: 6px;
-		border: 1px solid #e5e5e5;
-		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
-		box-sizing: border-box;
-	}
+	min-width: 255px;
+	max-width: 1050px;
+	padding: 2.2em 2.8em;
+	background-color: #fff;
+	border-radius: 6px;
+	border: 1px solid #e5e5e5;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+	box-sizing: border-box;
 
 	.bb-help-sidebar {
-		background-color: #fff;
-		border: 1px solid #000;
+		background: #f5f5f5;
+		border-radius: 6px;
 		box-sizing: border-box;
-		padding: 20px;
+		padding: 10px 20px;
+		float: left;
+		width: 30%;
 	}
 
-	.bb-help-menu {
+	.bb-help-file-content {
+		float: right;
+		width: 65%;
 
-		li {
-			display: inline;
+		.bb-help-menu {
+
+			li {
+				display: inline;
+			}
+
+			li:after {
+				font-family: dashicons;
+				content: "\f345";
+				margin: 0 3px;
+				display: inline-block;
+				vertical-align: middle;
+			}
+
 		}
 
-		li:after {
-			font-family: dashicons;
-			content: "\f345";
-			margin: 0 3px;
-			display: inline-block;
-			vertical-align: middle;
+		img {
+			max-width: 100%;
+			width: 100%;
 		}
-
 	}
 
 }
