--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -993,24 +993,6 @@ body.post-type-bp-email .categorydiv label {
 		.inside {
 			padding: 0 15px;
 			min-height: 60px;
-
-			ul {
-				padding: 0;
-				list-style: none;
-			}
-
-			ul > li {
-				margin-bottom: 10px;
-			}
-
-			span.main-menu {
-				display: block;
-				padding: 7px 10px;
-				background-color: #f7f7f7;
-				border: 1px solid #e5e5e5;
-				text-decoration: none;
-				width: auto;
-			}
 		}
 	}
 
@@ -1038,17 +1020,39 @@ body.post-type-bp-email .categorydiv label {
 	box-sizing: border-box;
 
 	.bb-help-sidebar {
-		background: #f5f5f5;
-		border-radius: 6px;
+		border-right: 1px solid #eaeaea;
 		box-sizing: border-box;
-		padding: 10px 20px;
 		float: left;
-		width: 30%;
+		width: 20%;
+		height: 100%;
+	}
+
+	.bb-help-sidebar > ul {
+		padding-right: 20px;
+	}
+
+	.bb-help-sidebar > ul > li > ul > li.selected a {
+		font-weight: 500;
+	}
+
+	.bb-help-sidebar > ul > li > a {
+		color: #23282d;
+		font-size: 16px;
+		font-weight: 600;
+	}
+
+	.bb-help-sidebar > ul > li > ul {
+		margin-top: 20px;
+	}
+
+	.bb-help-sidebar > ul > li > ul > li > ul {
+		margin-top: 10px;
+		margin-left: 20px;
 	}
 
 	.bb-help-file-content {
 		float: right;
-		width: 65%;
+		width: 75%;
 
 		.bb-help-menu {
 
@@ -1056,14 +1060,13 @@ body.post-type-bp-email .categorydiv label {
 				display: inline;
 			}
 
-			li:after {
+			li:not(:last-child):after {
 				font-family: dashicons;
 				content: "\f345";
 				margin: 0 3px;
 				display: inline-block;
 				vertical-align: middle;
 			}
-
 		}
 
 		img {
